--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,9 @@
     = stylesheet_link_tag "application", :media => "all"
     = javascript_include_tag "application"
 
+    = stylesheet_link_tag "validationEngine.jquery"
+    = javascript_include_tag "site", "jquery.validationEngine", "jquery.validationEngine-zh_CN"
+
   %body
     .navbar.navbar-fixed-top
       .navbar-inner
