--- a/app/views/participants/_parts.html.haml
+++ b/app/views/participants/_parts.html.haml
@@ -1,73 +1,74 @@
-#wide
-  #roundshape
-    = link_to t('global.create'), new_participant_path
-  .bordershape
+.row-fluid
+  .span12
+    = link_to t('global.create'), new_participant_path, :class => 'btn btn-primary'
+
     = image_tag('view.png')
     = '-' + t('global.show')
     \|
     = image_tag('edit.png')
     = '-' + t('global.edit')
 
-#equal-left
-  %table
-    %caption= t 'participant.customer'
-    %thead
-      %tr
-        %th= t 'formtastic.labels.participant.part_type'
-        %th= t 'formtastic.labels.participant.part_id'
-        %th= t 'formtastic.labels.participant.status'
-        %th= t 'formtastic.labels.participant.active'
-        %th= t 'global.task'
-        %th= t 'formtastic.labels.participant.description'
-        %th
-    - @participants.each do |participant|
-      %tr
-        %td= participant.part_type
-        %td= participant.part_id
-        %td= participant.local_status
-        %td
-          = #convert_yes_no(participant.active)
-          - if participant.active
-            = image_tag('yes.png') 
-          - else
-            = link_to t('participant.make_active'), {:controller=>'board', :action=>'active_participant', :id=>participant.id}, {:title=>t('participant.make_active')}
-        %td= link_to participant.tasks.length, :controller=>'account', :action=>'participant_tasks', :id=> participant
-        %td= participant.description
-        %td
-          = link_to image_tag('view.png'), participant, {:title=>t('global.show')}
-          - if admin? or participant.user == current_user
-            = link_to image_tag('edit.png'), edit_participant_path(participant), {:title=>t('global.edit')}
-            = link_to image_tag('delete.png'), participant, {:confirm => t('site.are_you_sure'), :method => :delete, :title => t('global.delete')} if participant.tasks.length == 0
-  = will_paginate @participants
+.row-fluid
+  .span6
+    %table.table.table-striped
+      %caption= t 'participant.customer'
+      %thead
+        %tr
+          %th= t 'formtastic.labels.participant.part_type'
+          %th= t 'formtastic.labels.participant.part_id'
+          %th= t 'formtastic.labels.participant.status'
+          %th= t 'formtastic.labels.participant.active'
+          %th= t 'global.task'
+          %th= t 'formtastic.labels.participant.description'
+          %th
+      - @participants.each do |participant|
+        %tr
+          %td= participant.part_type
+          %td= participant.part_id
+          %td= participant.local_status
+          %td
+            = #convert_yes_no(participant.active)
+            - if participant.active
+              = image_tag('yes.png') 
+            - else
+              = link_to t('participant.make_active'), {:controller=>'board', :action=>'active_participant', :id=>participant.id}, {:title=>t('participant.make_active')}
+          %td= link_to participant.tasks.length, :controller=>'account', :action=>'participant_tasks', :id=> participant
+          %td= participant.description
+          %td
+            = link_to image_tag('view.png'), participant, {:title=>t('global.show')}
+            - if admin? or participant.user == current_user
+              = link_to image_tag('edit.png'), edit_participant_path(participant), {:title=>t('global.edit')}
+              = link_to image_tag('delete.png'), participant, {:confirm => t('site.are_you_sure'), :method => :delete, :title => t('global.delete')} if participant.tasks.length == 0
+    = will_paginate @participants
 
-#equal-right
-  %table
-    %caption= t 'participant.shop'
-    %thead
-      %tr
-        %th= t 'formtastic.labels.participant.part_type'
-        %th= t 'formtastic.labels.participant.part_id'
-        %th= t 'formtastic.labels.participant.status'
-        %th= t 'formtastic.labels.participant.active'
-        %th= t 'global.task'
-        %th= t 'formtastic.labels.participant.description'
-        %th
-    - @shops.each do |participant|
-      %tr
-        %td= participant.part_type
-        %td= participant.part_id
-        %td= participant.local_status
-        %td
-          = #convert_yes_no(participant.active)
-          - if participant.active
-            = image_tag('yes.png') 
-          - else
-            = link_to t('participant.make_active'), {:controller=>'board', :action=>'active_participant', :id=>participant.id}, {:title=>t('participant.make_active')}
-        %td= link_to participant.own_tasks.length, :controller=>'account', :action=>'participant_tasks', :id=> participant
-        %td= participant.description
-        %td
-          = link_to image_tag('view.png'), participant, {:title=>t('global.show')}
-          - if admin? or participant.user == current_user
-            = link_to image_tag('edit.png'), edit_participant_path(participant), {:title=>t('global.edit')}
-            = link_to image_tag('delete.png'), participant, {:confirm => t('site.are_you_sure'), :method => :delete, :title => t('global.delete')} if participant.own_tasks.length == 0
-  = will_paginate @shops
+  .span6
+    %table.table.table-striped
+      %caption= t 'participant.shop'
+      %thead
+        %tr
+          %th= t 'formtastic.labels.participant.part_type'
+          %th= t 'formtastic.labels.participant.part_id'
+          %th= t 'formtastic.labels.participant.status'
+          %th= t 'formtastic.labels.participant.active'
+          %th= t 'global.task'
+          %th= t 'formtastic.labels.participant.description'
+          %th
+      - @shops.each do |participant|
+        %tr
+          %td= participant.part_type
+          %td= participant.part_id
+          %td= participant.local_status
+          %td
+            = #convert_yes_no(participant.active)
+            - if participant.active
+              = image_tag('yes.png') 
+            - else
+              = link_to t('participant.make_active'), {:controller=>'board', :action=>'active_participant', :id=>participant.id}, {:title=>t('participant.make_active')}
+          %td= link_to participant.own_tasks.length, :controller=>'account', :action=>'participant_tasks', :id=> participant
+          %td= participant.description
+          %td
+            = link_to image_tag('view.png'), participant, {:title=>t('global.show')}
+            - if admin? or participant.user == current_user
+              = link_to image_tag('edit.png'), edit_participant_path(participant), {:title=>t('global.edit')}
+              = link_to image_tag('delete.png'), participant, {:confirm => t('site.are_you_sure'), :method => :delete, :title => t('global.delete')} if participant.own_tasks.length == 0
+    = will_paginate @shops
