--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -1,10 +1,5 @@
-#roundshape
-  - if @task.can_modify? and @task.user == current_user
-    = link_to t('global.edit'), edit_task_path(@task) |
-  = link_to t('global.back'), :back
-
-#mainframe
-  .bordershape
+.row-fluid
+  .span4
     %p
       %b=t 'global.title'
       = @task.title
@@ -35,24 +30,24 @@
       = @task.point
 
     %p
-      %b= t 'formtastic.labels.task.tran_type'
+      %b= t 'simple_form.labels.task.tran_type'
       = convert_tran_type(@task.tran_type)
 
     %p
-      %b= t 'formtastic.labels.task.tran_id'
+      %b= t 'simple_form.labels.task.tran_id'
       = @task.tran_id
 
-  .bordershape
+  .span4
     %p
       %b=t 'task.condition'
     %hr
-    = t 'formtastic.labels.task.worker_level'
+    = t 'simple_form.labels.task.worker_level'
     = @task.worker_level
     %br
-    = t 'formtastic.labels.task.task_day'
+    = t 'simple_form.labels.task.task_day'
     = @task.task_day
     %br
-    = t 'formtastic.labels.task.avoid_day'
+    = t 'simple_form.labels.task.avoid_day'
     = @task.avoid_day
     /
       %br
@@ -62,23 +57,22 @@
       = t 'formtastic.labels.task.extra_word'
       = @task.extra_word
     %br
-    = t 'formtastic.labels.task.all_star'
+    = t 'simple_form.labels.task.all_star'
     = convert_yes_no(@task.all_star)
     %br
-    = t 'formtastic.labels.task.custom_judge'
+    = t 'simple_form.labels.task.custom_judge'
     = convert_yes_no(@task.custom_judge)
     %br
-    = t 'formtastic.labels.task.custom_judge_content'
+    = t 'simple_form.labels.task.custom_judge_content'
     = h @task.custom_judge_content
     %br
-    = t 'formtastic.labels.task.custom_msg'
+    = t 'simple_form.labels.task.custom_msg'
     = convert_yes_no(@task.custom_msg)
     %br
-    = t 'formtastic.labels.task.custom_msg_content'
+    = t 'simple_form.labels.task.custom_msg_content'
     = h @task.custom_msg_content
 
-#right
-  .bordershape
+  .span4
     = t 'task.owner'
     = @task.user.username
     %br
@@ -104,22 +98,26 @@
           = image_tag("http://wpa.qq.com/pa?p=1:#{@task.worker.im_q}:4", :alt=>'点击这里给我发消息')
 
     %hr
-    = t 'formtastic.labels.task.published_time'
+    = t 'simple_form.labels.task.published_time'
     = l @task.published_time if @task.published_time
     %br
-    = t 'formtastic.labels.task.takeover_time'
+    = t 'simple_form.labels.task.takeover_time'
     = l @task.takeover_time if @task.takeover_time
     %br
-    = t 'formtastic.labels.task.pay_time'
+    = t 'simple_form.labels.task.pay_time'
     = l @task.pay_time if @task.pay_time
     %br
-    = t 'formtastic.labels.task.transport_time'
+    = t 'simple_form.labels.task.transport_time'
     = l @task.transport_time if @task.transport_time
     %br
-    = t 'formtastic.labels.task.finished_time'
+    = t 'simple_form.labels.task.finished_time'
     = l @task.finished_time if @task.finished_time
     %br
-    = t 'formtastic.labels.task.confirmed_time'
+    = t 'simple_form.labels.task.confirmed_time'
     = l @task.confirmed_time if @task.confirmed_time
 
-#mainframe
+.row-fluid
+  .span12
+    - if @task.can_modify? and @task.user == current_user
+      = link_to t('global.edit'), edit_task_path(@task), :class=>'btn btn-primary' |
+    = link_to t('global.back'), :back, :class=>'btn btn-primary'
